<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title"><b>Welcome to the Shopping List</b></string>
    <string name="list_title"><b>Please Choose Your Items</b></string>
    <string name="app_name">Assignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="job">Job: </string>
    <string name="age">Age: </string>
    <string name="money">Money: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex: </string>
    <string name="submit">Submit</string>

    <string-array name="job_array">
        <item>Accountant</item>
        <item>President</item>
        <item>Superhero</item>
        <item>Bear Tax Collector</item>
        <item>Radio DJ</item>
        <item>Computer Scientist</item>
        <item>Mime</item>
        <item>Garda</item>
        <item>Lawyer</item>
    </string-array>

    <string name="title_activity_activity_list">ActivityList</string>

</resources>
