<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >
 
         <TextView
             android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:text="@string/name"
		      />
         <EditText
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10"
		     android:inputType="text" 
		     />

         <TextView
             android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:text="@string/age"
		     />
         
         <EditText
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10"
		     android:inputType="text" 
		     />

         <TextView
             android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:text="@string/money"
		      />
         
         <EditText
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10"
		     android:inputType="text" 
		     />
    
         <TextView
             android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:text="@string/email"
		     />
         <EditText
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:ems="10"
		     android:inputType="text" 
		     />

         <TextView
             android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:text="@string/job"
		     />
         <Spinner
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:entries="@array/job_array"
		     android:prompt="@string/job"
		    />

        
	    <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/sex"
	        />
	    
	    <RadioGroup
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        
	         >
 
        <RadioButton
            android:id="@+id/Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
 
        <RadioButton
            android:id="@+id/Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
 
    </RadioGroup>

     <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="@string/submit" />


</LinearLayout>

</ScrollView>

